fix: iframe z-index

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -151,6 +151,10 @@ i{
     display: none;
 }
 
+iframe {
+    z-index: var(--z-m2);
+}
+
 /* media queries */
 
 @media screen and (max-width: 275px) {
